<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/add_feed_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:text="@string/feed_name" />

    <EditText
        android:id="@+id/feed_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feed_name_hit"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:text="@string/feed_url" />

    <EditText
        android:id="@+id/feed_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feed_url_hit"
        android:ems="10" />

    <Button
        android:id="@+id/add_feed_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_feed_btn" />

</LinearLayout>
